--- a/changelog/version-history/notable-features-improvements.mdx
+++ b/changelog/version-history/notable-features-improvements.mdx
@@ -1,144 +1,111 @@
 ---
 title: "Notable Features & Improvements"
-description: "Showcases the significant features, enhancements, and optimizations introduced in recent GoogleTest versions. This includes test discovery improvements, new assertions, parameterized testing capabilities, and upgrades that impact daily usage. Readers gain a practical sense of how the framework is advancing to support modern C++ testing."
+description: "Detailed summaries of key new features and enhancements introduced in each major and minor release. This page empowers users to adopt new capabilities and design patterns as soon as they become available."
 ---
 
-# Notable Features & Improvements in GoogleTest
+# Notable Features & Improvements
 
-GoogleTest continues to evolve, embracing modern C++ features and improving the testing experience for developers. This page highlights key enhancements introduced in recent versions that directly impact how you write, organize, and run your tests. Discover new assertions, enhanced parameterized testing, improved mock behaviors, and usability tweaks designed to streamline your daily workflow.
-
----
-
-## 1. Enhanced Test Discovery and Organization
-
-### Smarter Test Naming and Filtering
-- Improved recognition of test suite and test names to better support complex naming patterns.
-- Upgraded filtering mechanism supports glob patterns and regular expressions with more predictable behavior.
-
-### Parameterized Testing Extensions
-- New features in parameterized tests allow combining multiple parameter sources.
-- Better support for type-parameterized tests simplifies testing templates and generic code.
-- Support for instantiating tests with user-defined parameter generators.
-
-**Example:**
-
-```cpp
-// Using combined parameter sources
-INSTANTIATE_TEST_SUITE_P(
-    Combined,
-    MyTest,
-    ::testing::Combine(::testing::Values(1, 2, 3), ::testing::Values('a', 'b')));
-
-// Type-parameterized test usage
-TYPED_TEST_SUITE(MyTypedTest, MyTypes);
-
-// Run tests for different types like int, double, etc.
-```
-
-## 2. New and Extended Assertions
-
-### Richer Assertion Macros
-- New assertions like `EXPECT_THAT()` and corresponding matchers provide expressive ways to validate container contents, strings, and custom predicates.
-- Enhanced failure messages give clearer insights into what went wrong, including better printing of expected and actual values.
-
-### Assertions for Floating-Point Comparisons
-- More robust ways to test floating point equality with tolerances and ULP-based comparisons.
-- Support for floating-point near equality with `EXPECT_NEAR()` improvements.
-
-**Usage Example:**
-
-```cpp
-EXPECT_THAT(my_vector, ::testing::ElementsAre(1, 2, 3));
-EXPECT_NEAR(my_float, expected_float, 1e-5);
-```
-
-## 3. Mocking Framework Improvements (gMock Enhancements)
-
-### Better Control of Mock Behavior Modes
-- Improved clarity and usability of `NiceMock`, `NaggyMock`, and `StrictMock` behavior modes.
-- Warnings and errors on uninteresting calls can be finely tuned per mock.
-
-### More Powerful Matchers and Actions
-- Enhanced built-in matcher support, including logical combinations (`AllOf`, `AnyOf`, `Not`) and container-specific matchers.
-- Expanded action capabilities include chaining actions (`DoAll`), delegating to real or fake objects, and invoking argument callbacks.
-
-### Simplified Mock Class Definitions
-- `MOCK_METHOD` macro refinements provide clearer syntax and better handling of complex method signatures.
-- Support for mocking move-only types (like `std::unique_ptr`) with straightforward syntax.
-
-### Improved Sequencing and Expectation Ordering
-- Enhanced `InSequence` and `After` clauses for specifying partial and total call orders in tests.
-- Expectations retire automatically when saturated or as sequences advance to reduce brittleness.
-
-**Example:**
-
-```cpp
-EXPECT_CALL(mock_obj, DoThis(_))
-    .Times(3)
-    .WillOnce(Return(1))
-    .WillOnce(Return(2))
-    .WillRepeatedly(Return(3));
-
-{
-  InSequence s;
-  EXPECT_CALL(mock_obj, Start());
-  EXPECT_CALL(mock_obj, Process());
-  EXPECT_CALL(mock_obj, End());
-}
-```
-
-## 4. Improved Performance and Compilation Speed
-
-### Compilation Efficiency
-- Recommendation to move mock class constructors and destructors to `.cc` files to reduce compile times.
-- Reduced template bloat when using `MOCK_METHOD` in large classes.
-
-### Test Execution Speed
-- Guidance on controlling mock strictness and uninteresting call warnings to optimize test suite runtime.
-- Encouragement of using `ON_CALL` for setting default behaviors rather than excessive `EXPECT_CALL`.
-
-## 5. Usability and Debugging Aids
-
-### Verbosity and Logging Controls
-- The `--gmock_verbose` flag set to `info`, `warning`, or `error` controls the amount of logged detail from mock expectations.
-- Detailed stack traces on expectation failures are available for in-depth debugging.
-
-### Matchers and Actions Insights
-- Comprehensive tracing of mock calls, including arguments and matched expectations, aids in diagnosing failing tests.
-- Facilities to define custom matchers and actions to fit domain-specific testing needs, complemented by expressive failure messages.
+This page highlights the most significant features and improvements introduced across recent major and minor releases. It aims to help you quickly grasp new capabilities, enhanced behaviors, and design patterns added to the framework so you can adopt and integrate them effectively into your workflow.
 
 ---
 
-### Summary of Key Improvements
+## Major and Minor Releases Overview
 
-| Feature                                    | Benefit                                      |
-| ------------------------------------------ | -------------------------------------------- |
-| Parameterized and Type-Parameterized Tests | More flexible and expressive test coverage   |
-| New Assertions and Matchers                 | Easier verification with clearer errors     |
-| Richer Mocking APIs                         | Precise control over mock behavior and calls|
-| Improved Compilation Practices              | Faster builds for large mock-heavy codebases|
-| Enhanced Debugging Support                  | Efficient troubleshooting and test maintenance|
+Each release is crafted with a focus on improving your experience with mocking in C++. From expanded mock method capabilities to refined strictness behaviors, these changes empower you to write clearer, more maintainable, and robust tests.
+
+### Enhanced Mock Method Declarations
+
+- **Flexible `MOCK_METHOD` Macro**: Support for detailed method qualifiers including `const`, `override`, `noexcept`, `Calltype(...)`, and reference qualifications (`ref(...)`) allows precise mocking of complex interfaces.
+
+- **Improved Handling of Commas in Types**: Wrapping return or argument types containing commas inside extra parentheses, or using aliases, resolves parsing issues seamlessly.
+
+- **Support for Overloaded and Templated Methods**: Mocking overloaded functions and class templates is straightforward with `MOCK_METHOD`; no additional boilerplate required.
+
+### Strictness Modes for Mocks
+
+- **NiceMock, NaggyMock, and StrictMock** classes let you control how your mocks handle uninteresting calls:
+  - `NiceMock` suppresses warnings on calls without expectations.
+  - `NaggyMock` (default behavior) warns on such calls.
+  - `StrictMock` treats uninteresting calls as failures, enhancing correctness checks.
+
+- These modes “inherit” constructors from the base mock classes, simplifying adoption even for mocks with arguments.
+
+### Improved Expectation Syntax and Flexibility
+
+- **Chaining Clauses in `EXPECT_CALL` and `ON_CALL`**: You can use `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` clauses with precise order enforcement.
+
+- **Expectation Ordering and Sequencing**: Using `InSequence` or `After` allows you to specify strict or partial call orders, helping to verify complex call interactions reliably.
+
+- **Automatic Cardinals Inference**: GoogleMock deduces call cardinality from the `WillOnce` and `WillRepeatedly` clauses when `Times` is omitted, reducing boilerplate.
+
+### Default and Custom Actions
+
+- **Built-in Default Actions** support common return types, including void, primitive types, and default-constructible classes.
+
+- **Chaining Multiple Actions** with `DoAll()` enables side effects combined with return values.
+
+- **Delegation Techniques**: Easily delegate mock method behavior to fakes, real objects, or parent class methods for hybrid testing approaches.
+
+- **Support for Move-only Types**: Returning and accepting `std::unique_ptr` and similar move-only types is fully supported in mocks.
+
+### Advanced Matchers and Actions
+
+- **Comprehensive Matcher Support**: From simple wildcard to compound and parameterized matchers, you can construct precise argument checks.
+
+- **Custom Matcher and Action Definitions**: Create reusable, expressive custom matchers and actions using convenient macros or by implementing interfaces.
+
+- **Safe Argument and Overload Disambiguation**: Use `SafeMatcherCast`, `Const()`, and `WithArgs` to finely control matcher and action behavior for overloaded and multi-argument methods.
+
+### Enhanced Error Reporting and Debugging
+
+- **Verbose Logging Control**: The `--gmock_verbose=LEVEL` flag (`info`, `warning`, `error`) adjusts diagnostic output, including call traces and stack information, aiding in root-cause analysis.
+
+- **Stack Traces in Warnings**: When enabled, gMock includes stack traces on uninteresting or unexpected calls for quick localization.
+
+- **Helpful Failure Messages**: Detailed mismatch reports showing arguments, pre-requisite expectations, and order violations assist rapid troubleshooting.
+
+### Performance and Compilation
+
+- **Optimized Mock Class Compilation**: Moving mock class constructors and destructors to `.cc` files speeds up builds significantly when mocking many methods.
+
+- **Support for Advanced Use Cases**: Using mocks in multithreaded tests is safe under defined rules, and complex asynchronous behaviors are testable via GoogleMock actions and synchronization utilities.
+
+### Usability Enhancements
+
+- **Improved Support for Mocking Non-virtual and Free Functions**: Advanced recipes enable mocking by interface indirection or templated dependency injection.
+
+- **Simplified Syntax for Setting Expectations Without Parameters**: You can omit argument matchers to express expectations on non-overloaded methods easily.
+
+- **Checkpoints and Partial Ordering**: You can insert checkpoints and define DAGs of call order to model realistic execution flow constraints.
 
 ---
 
-## Related Documentation
+## Tips for Smooth Migration and Adoption
 
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Practical recipes and advanced mocking techniques.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html): Quick reference for mock syntax, matchers, and actions.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Detailed API and usage patterns.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly introduction.
-- [GoogleTest Feature Overview](https://google.github.io/googletest/overview/getting-started-intro/feature-overview.html)
+- If upgrading to versions introducing strict mock behaviors, thoroughly review and adapt your expectations and usages of `NiceMock`, `NaggyMock`, and `StrictMock` as per your test goals.
 
----
+- Review all mock methods with overloaded signatures to ensure all overloads are appropriately mocked or properly lifted with `using` declarations.
 
-## Best Practices Based on Recent Improvements
+- When managing complex call ordering, leverage `InSequence` and `After` clauses to explicitly document dependencies and prevent brittle tests.
 
-- Use `ON_CALL` to set default behavior to reduce brittle and overly strict tests.
-- Prefer sequences (`InSequence`) when verifying call order.
-- Utilize new matchers and `EXPECT_THAT` to write expressive assertions.
-- For large mock classes, define constructors/destructors in `.cc` files to speed up compilation.
-- Control verbosity in test runs with `--gmock_verbose` to balance informative logs with noise.
+- Use default action clauses with `ON_CALL` thoughtfully to minimize uninteresting call warnings without overconstraining your tests.
 
 ---
 
-With these improvements, GoogleTest equips you to write clearer, faster, and more reliable tests, leveraging the full power of modern C++ and GoogleMock's expressive mocking facilities.
+## Additional Resources
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes for effective mocking patterns and pitfalls.
+
+- [Mocking Reference](../reference/mocking.md): Detailed API docs for `EXPECT_CALL`, `ON_CALL`, and related mechanisms.
+
+- [Strictness Modes Guide](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy): Understand mock strictness and when to apply each.
+
+- [Matchers Reference](reference/matchers.md): Comprehensive overview of argument matchers.
+
+- [Actions Reference](reference/actions.md): Built-in and custom actions walkthrough.
+
+- [Mocking Techniques and Best Practices](guides/mocking-techniques/mock-classes-expectations.md): Step-by-step guide to creating mock classes and setting expectations.
+
+---
+
+This page is your compass to navigate the evolving capabilities of GoogleMock and leverage them for more effective C++ unit testing.
