--- a/overview/architecture-features-integration/architecture-overview.mdx
+++ b/overview/architecture-features-integration/architecture-overview.mdx
@@ -1,143 +1,161 @@
 ---
-title: "System Architecture (with Diagram)"
-description: "Explains the high-level architecture of GoogleTest, including its test discovery, assertion mechanisms, mocking infrastructure, and integration points. Presents a mermaid diagram to visualize the workflow from user code to test execution and reporting."
+title: "Framework Architecture"
+description: "See how GoogleTest is structured under the hood. Follow an architecture diagram showing the relationships among core modules, main entry points, and integration with GoogleMock. Grasp the flow from writing a test, running it, and reporting results."
 ---
 
-# System Architecture (with Diagram)
+# Framework Architecture
 
-## Understanding GoogleTest's Architecture
+## Understanding GoogleTest: An Inside Look
 
-GoogleTest is a powerful C++ testing framework designed to help developers write, organize, and execute tests efficiently. This page provides a high-level overview of GoogleTest's architecture, focusing on how your test code interacts with the framework's core mechanisms. We cover key elements such as test discovery, assertion handling, mocking infrastructure, and how these components integrate to provide a seamless test execution and reporting experience.
+GoogleTest isn’t just a framework you use at the surface level—it’s designed with a robust architecture that ensures your C++ tests are effective, efficient, and scalable. This page demystifies how GoogleTest is constructed under the hood, allowing you to grasp the relationships between its core modules, the gateway points that start tests, and its deep integration with GoogleMock.
 
-By understanding this architecture, you will better appreciate how GoogleTest processes your tests, which will help you write more effective and maintainable test suites.
+### Why Knowing the Architecture Matters
 
----
+By seeing the internal architecture, you understand:
 
-## Core Architecture Components
-
-GoogleTest’s architecture can be understood as a workflow that starts with the tests you write and ends with detailed test execution and reporting. The system is organized around the following core components:
-
-### 1. Test Discovery
-
-GoogleTest automatically discovers tests within your codebase. It identifies test cases and test methods based on macros such as `TEST()` and `TEST_F()`. This process eliminates the need to manually register tests, enabling a smooth and scalable experience.
-
-### 2. Assertion Mechanism
-
-At the heart of GoogleTest is a rich set of assertion macros (`EXPECT_`, `ASSERT_`) that verify expected outcomes. These assertions transform your test logic into pass/fail results, tracking failures and continuing or aborting test execution as needed.
-
-### 3. Mocking Infrastructure
-
-Integrated closely with the GoogleMock framework (gMock), GoogleTest provides an expressive and robust mocking system. This infrastructure allows you to simulate and verify interactions with dependencies using mock classes, expectations, and matchers.
-
-### 4. Test Execution Framework
-
-GoogleTest manages the lifecycle of test execution, from initialization to teardown. This includes setting up test fixtures, running individual test methods, and handling exceptions or failures gracefully.
-
-### 5. Reporting and Output
-
-Once tests run, GoogleTest summarizes results with detailed output. It shows successes, failures, and provides diagnostic messages including stack traces and argument values for failed assertions or mock expectations.
+- **How your tests flow through the framework:** From writing test cases to executing them and reporting results.
+- **The roles of different components:** What modules do, including how mocks fit in.
+- **Why GoogleTest behaves the way it does:** This aids in troubleshooting, optimizing tests, and integrating GoogleTest into larger systems.
 
 ---
 
-## Workflow Visualization
+## Key Components and Their Relationships
 
-The following Mermaid diagram illustrates the typical path from your user-written test code to the final reporting.
+At its core, GoogleTest is composed of several focused modules working together seamlessly:
+
+### 1. User Test Code
+
+Your C++ test definitions — using macros like `TEST()` or `TEST_F()` — serve as the entry points. These define individual tests or test suites.
+
+### 2. Test Execution Engine
+
+This is the core orchestrator that discovers defined tests, runs them, and manages their lifecycle, including setup, teardown, and assertion checking.
+
+### 3. Assertion Mechanism
+
+Integrated deeply into the test engine, this module evaluates all assertions like `EXPECT_EQ`, reporting failures and successes.
+
+### 4. GoogleMock Integration
+
+GoogleTest tightly integrates with GoogleMock (gMock) to allow mocking and verification of method calls on fake objects. This enables interaction-based testing on top of state-based testing.
+
+### 5. Result Reporting and Logging
+
+After tests execute, this module formats and reports results clearly, aggregating failures, success rates, and other critical information.
+
+### 6. Test Environment & Platform Abstraction
+
+GoogleTest abstracts platform differences ensuring portability across Linux, Windows, and Mac OS, even when dealing with threading, exceptions, or file system access.
 
 ```mermaid
 flowchart TD
 
-  subgraph User Code
-    UTests["User Test Code (TEST(), TEST_F())"]
-  end
+  UserCode["User Test Code (TEST/TEST_F Definitions)"] --> TestRunner["Test Execution Engine"]
+  TestRunner --> AssertionModule["Assertion Mechanism"]
+  TestRunner --> ResultReporter["Result Reporting & Logging"]
+  TestRunner --> PlatformLayer["Test Environment & Platform Abstraction"]
+  TestRunner --> GoogleMock["GoogleMock Integration"]
 
-  subgraph GoogleTest Framework
-    TD[Test Discovery] --> AE[Assertion Evaluation]
-    AE --> MI[Mocking Infrastructure]
-    MI --> TE[Test Execution Manager]
-    TE --> TR[Test Reporting]
-  end
+  GoogleMock --> MockClasses["Mock Classes (MOCK_METHODs)"]
+  UserCode --> MockClasses
 
-  UTests --> TD
-  TR --> UOutput["Console / Logs"]
+  ResultReporter --> ConsoleOutput["Console/Log Output"]
 
-  %% Interactions
-  MI --> |Verifies Expectations| AE
-  AE --> |Detects Failures| TE
+  click TestRunner "/overview/core-architecture/test-lifecycle" "Open Test Lifecycle"
+  click GoogleMock "/concepts/core-architecture/mocking-concepts" "Learn about Mocking"
 
-  classDef userCode fill:#f9f,stroke:#333,stroke-width:1px;
-  classDef framework fill:#bbf,stroke:#333,stroke-width:1px;
+  classDef core fill:#cfc,stroke:#262,stroke-width:2px
+  class UserCode,TestRunner,GoogleMock core
 
-  class UTests userCode;
-  class TD,AE,MI,TE,TR framework;
-```
+``` 
 
 ---
 
-## Detailed Component Overview
+## From Test Definition to Result: The Flow
 
-### Test Discovery
-- **What it does:** Automatically finds test definitions in compiled test binaries.
-- **Why it matters:** Eliminates tedious test registration, scales effortlessly.
-- **How it helps you:** Write tests naturally with macros; the system manages inclusion.
+### Writing the Test
 
-### Assertion Mechanism
-- **Core functionality:** Validates conditions and records results.
-- **User impact:** Allows tests to express expectations clearly.
-- **Features:** Supports fatal assertions (`ASSERT_`) that abort tests and non-fatal (`EXPECT_`) that continue execution.
+You start by writing tests using `TEST()` or `TEST_F()` macros, which define test suites and test cases.
 
-### Mocking Infrastructure
-- **Integration:** Powered by GoogleMock (gMock).
-- **Capabilities:** Define mock classes, set expectations with `EXPECT_CALL`, specify behaviors, and verify interactions.
-- **User benefits:** Isolate units under test, simulate external dependencies, verify usage patterns.
+### Registration & Discovery
 
-### Test Execution Framework
-- **Responsibilities:** Manages setup and teardown; executes each test method individually.
-- **User experience:** Provides test fixtures to share state; robust lifecycle management to avoid side effects.
+Upon compilation and initialization, GoogleTest registers all test cases via static registries. The test runner engine then discovers these tests at runtime.
 
-### Reporting and Output
-- **Details:** Presents clear pass/fail summaries.
-- **Diagnostic help:** Provides stack traces, detailed match failure explanations, and mock call logs when enabled.
-- **Customization:** Verbosity levels and output formats can be configured.
+### Running the Test
 
----
+The Test Execution Engine manages each test's lifecycle:
+- Constructs the test fixture (if `TEST_F`)
+- Calls `SetUp()`
+- Runs the test body
+- Checks all assertions
+- Calls `TearDown()`
+- Destroys the test fixture
 
-## Example Scenario: From Test to Reporting
+### Mock Handling
 
-Imagine you’ve written a test using `TEST_F` and applied some `EXPECT_CALL` mocks and assertions:
+If mocks are used, GoogleMock seamlessly intercepts calls and enforces expectations.
 
-1. GoogleTest's **Test Discovery** detects the new test case.
-2. When run, the **Test Execution Framework** sets up any fixtures and runs your test method.
-3. During execution, your **Assertions** check conditions and mock **Expectations** verify interaction contracts.
-4. If an assertion fails or an unexpected mock call occurs, GoogleTest records failure information but continues with non-fatal failures.
-5. After all tests complete, the **Reporting** module outputs a summary including any failures and diagnostic information.
+### Reporting
 
-This workflow ensures your tests are automatically managed, failures are clearly communicated, and mocks behave as expected.
+Results of each test (pass/fail, assertion details) are accumulated, formatted, and outputted by the result reporting system.
 
 ---
 
-## Practical Tips
+## Integration with GoogleMock
 
-- **Leverage Test Fixtures:** Use `TEST_F` for shared setup and teardown across tests.
-- **Use Mock Classes Wisely:** Define mocks using `MOCK_METHOD` macros to gain precise control over dependencies.
-- **Set Clear Expectations:** Use `EXPECT_CALL` with appropriate matchers and cardinalities to specify required interactions.
-- **Handle Assertion Failures:** Use `ASSERT_` for critical checks that require aborting a test, and `EXPECT_` where continuing makes sense.
-- **Control Verbosity for Debugging:** Run tests with `--gmock_verbose=info` to diagnose mock call matching issues.
+GoogleMock is packaged inside GoogleTest and acts as an extension to support interaction testing.
 
----
+- **Core Integration**: GoogleMock provides macros like `MOCK_METHOD` that generate mock classes compatible with the test framework.
+- **Verification & Expectations**: GoogleMock expectations automatically tie into GoogleTest failures.
+- **Flow**: During test execution, mocked method calls are monitored, intercepted, and their behavior dictated by expectations.
 
-## References & Next Steps
-
-For a deeper dive into individual components and practical guidance:
-
-- [What is GoogleTest?](/overview/product-intro-core-concepts/what-is-googletest) — Introduction to GoogleTest’s purpose and architecture.
-- [Introduction to Mocking with GoogleMock](/guides/mocking-advanced-testing/intro-mocking) — Learn to leverage mocks effectively.
-- [Feature Overview](/overview/architecture-features-integration/feature-quick-overview) — Explore all core GoogleTest capabilities.
-- [Assertions API](/api-reference/core-apis/test-assertions) — Comprehensive details on assertions.
-
-Understanding the architecture on this page will provide the foundation to master GoogleTest and GoogleMock, enabling you to write robust, maintainable C++ tests and mock objects.
+This tight integration allows developers to blend state- and interaction-based testing naturally.
 
 ---
 
-### Source Code Reference
+## Practical Scenario: End-to-End Test Flow
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{path: "googlemock/include/gmock/gmock.h", range: "1-102"}, {path: "docs/reference/mocking.md", range: "1-500"}]} />
+Imagine you write a mock class for a `Database` interface and a test that uses it:
+
+1. You define `MockDatabase` with `MOCK_METHOD`s.
+2. In your test, you use `EXPECT_CALL` to set expectations on the mock.
+3. Your test code triggers operations on `MockDatabase`.
+4. As your test runs, GoogleMock intercepts calls, checks against expectations.
+5. GoogleTest runs the test lifecycle, evaluates assertions.
+6. If any unexpected calls or assertion failures occur, GoogleTest reports them immediately.
+7. Test results are formatted and output.
+
+---
+
+## Tips to Navigate the Framework Architecture
+
+- **Focus on User Intent**: Remember, the flow is about what your test code wants to achieve — writing, executing, verifying, reporting.
+- **Follow the Call Stack**: Knowing which component handles what helps identify why tests succeed/fail.
+- **Leverage the Integration**: Using GoogleMock inside GoogleTest is more than syntax sugar — it's a robust contract processor that integrates expectation verification at the right phase.
+
+---
+
+## Troubleshooting Common Failures
+
+- **Test Discovery Issues**: Make sure your tests are properly registered (tests disappear if registration statics are optimized away).
+- **Mock Expectations Not Met**: Check that `EXPECT_CALL`s are set before the tested code runs.
+- **Failure Reporting Not Clear**: Use higher verbosity flags `--gmock_verbose=info` for detailed trace.
+
+---
+
+## Get Started with Architecture in Mind
+
+Once you understand the overall architecture and test flow, you can dive deeper into GoogleTest’s rich feature set and GoogleMock’s mocking strategies. Begin by writing simple tests and use mocks to simulate interactions, incrementally expanding as you master the framework.
+
+**Next Steps:**
+- Explore the [Getting Started Guides](https://github.com/google/googletest/tree/main/docs/gmock_for_dummies.md) for hands-on usage.
+- Refer to the [Mocking Cookbook](https://github.com/google/googletest/tree/main/docs/gmock_cook_book.md) to master mocking patterns.
+- Learn how tests execute internally with the [Test Lifecycle Documentation](https://github.com/google/googletest/tree/main/concepts/core-architecture/test-lifecycle.md).
+
+---
+
+## Summary
+
+This page offers a foundational understanding of GoogleTest’s internal structure and how its components orchestrate the journey from test creation to result reporting. Knowing this will empower you to write better tests, debug effectively, and harness mocking fully.
+
+---
